--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>CRM</title>
+  <title><%= "CRM "+(yield(:title)) %></title>
   <!-- VIEWPORT, sirve para dar responsive y soporte a dspositivos moviles -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -12,33 +12,14 @@
 </head>
 
   <% if usuario_signed_in? %>
-      <%= render "layouts/menu" %>
-      <%= notice %>
-<%= alert %>
+        <%= render "layouts/menu" %>
+          <%= notice %>
+    <%= alert %>
+    </div>
   <% else %>
-    <body class="hold-transition login-page">
+    <body>
       <%= yield %>
     </body>
   <%end%>
-  
-  
-   <!-- Bootstrap 3.3.5 -->
-    <script src="/assets/bootstrap.js"></script>
-    <!-- FastClick -->
-    <script src="/assets/fastclick.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="/assets/app.js"></script>
-    <!-- Sparkline -->
-    <script src="/assets/jquery.sparkline.min.js"></script>
-    <!-- jvectormap -->
-    <script src="/assets/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="/assets/jquery-jvectormap-world-mill-en.js"></script>
-    <!-- SlimScroll 1.3.0 -->
-    <script src="/assets/jquery.slimscroll.min.js"></script>
-    <!-- ChartJS 1.0.1 -->
-    <script src="/assets/Chart.min.js"></script>
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="/assets/dashboard2.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="/assets/demo.js"></script>
+
 </html>
