--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,92 +1,210 @@
-<div id="wrapper">
-    <!-- Sidebar -->
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li class="sidebar-brand">
-                <a href="#">
-                    CRM
-                </a>
-            </li>
-            <li>
-                <a href="#">Empresa CLientes</a>
-            </li>
-            <li>
-                <a href="#">Proveedores</a>
-            </li>
-            <li>
-                <a href="#">Productos</a>
-            </li>
-            <li>
-                <a href="#">Servicios</a>
-            </li>
-            <li>
-                <a href="#">Tareas</a>
-            </li>
-            <li>
-                <a href="#">Facturas</a>
-            </li>
-            <li>
-                <a href="#">Usuarios</a>
-            </li>
-        </ul>
-    </div>
-        
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
+<div class="wrapper hold-transition skin-blue sidebar-mini">
+    <header class="main-header">
+        <a href="welcomes/" class="logo blanco">
+            <span class="logo-mini"><b>C</b>RM</span>
+            <span class="logo-lg"><b>Evolusie</b>CRM</span>
+        </a>
+        <nav class="navbar navbar-static-top">
+            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+                <span class="sr-only">Toggle navigation</span>
+            </a>
+            <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a class="btn btn-default fa fa-bars fa-2x" id="menu-toggle"><span class="sr-only"></span></a></li>
+                    <li>
+                        <%= link_to '<i class="fa fa-building-o"></i>'.html_safe, empresaclientes_path(@user) %>
+                    </li>
+                    <li>
+                        <%= link_to '<i class="fa fa-user"></i>'.html_safe, proveedors_path(@user) %>
+                    </li>
+                    <li>
+                        <%= link_to '<i class="fa fa-calendar"></i>'.html_safe, tareas_path(@user) %>
+                    </li>
+                    <li class="dropdown user user-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                          <span class="hidden-xs fa fa-gear"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="user-header">
+                                <p class="letraN">
+                                    <%= current_usuario.nombre %> <%= current_usuario.apellido %>
+                                    <small><%= current_usuario.email %></small>
+                                    <small><%= current_usuario.rol %></small>
+                                </p>
+                            </li>
+                            <li class="user-body">
+                                
+                            </li>
+                            <li class="user-footer">
+                                <div class="pull-left">
+                                    <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                </div>
+                                <div class="pull-right">
+                                    <%= link_to "Cerrar Sesión", destroy_usuario_session_path, method: :delete, :class=>"fa fa-sign-out" %>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-                </li>
-              </ul>
-              <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Search">
+        </nav>
+    </header>
+    <aside class="main-sidebar">
+        <section class="sidebar">
+            <div class="user-panel">
+                <div class="pull-left info">
+                    <p>
+                        <%= current_usuario.nombre %>
+                        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                    </p>
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-              </form>
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                  </ul>
+                <div class="pull-left footer">
+                    <p></p>
+                </div>
+            </div>
+            
+            <ul class="sidebar-menu">
+                <li class="header"><center>Menu CRM Evolusie</center></li>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-building-o"></i>
+                        <span>Clientes</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><%= link_to '<i class="fa fa-eye"></i> Ver Clientes'.html_safe, empresaclientes_path(@user) %></li>
+                        <li><%= link_to '<i class="fa fa-plus"></i> Nuevo Clientes'.html_safe, new_empresacliente_path(@user) %></li>
+                    </ul>
                 </li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-user"></i>
+                        <span>Proveedor</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><%= link_to '<i class="fa fa-eye"></i> Ver Proveedores'.html_safe, proveedors_path(@user) %></li>
+                        <li><%= link_to '<i class="fa fa-plus"></i> Nuevo Proveedores'.html_safe, new_proveedor_path(@user) %></li>
+                    </ul>
+                </li>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-users"></i>
+                        <span>Usuarios</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><%= link_to '<i class="fa fa-eye"></i> Ver Usuarios'.html_safe, usuarios_path(@user) %></li>
+                    </ul>
+                </li>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-file-text-o"></i>
+                        <span>Productos</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><%= link_to '<i class="fa fa-eye"></i> Ver Productos'.html_safe, productos_path(@user) %></li>
+                        <li><%= link_to '<i class="fa fa-plus"></i> Nuevo Producto'.html_safe, new_producto_path(@user) %></li>
+                    </ul>
+                </li>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-files-o"></i>
+                        <span>Servicios</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><%= link_to '<i class="fa fa-eye"></i> Ver Servicios'.html_safe, servicios_path(@user) %></li>
+                        <li><%= link_to '<i class="fa fa-plus"></i> Nuevo Servicio'.html_safe, new_servicio_path(@user) %></li>
+                    </ul>
+                </li>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-calendar"></i>
+                        <span>Tareas</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><%= link_to '<i class="fa fa-eye"></i> Ver Tareas'.html_safe, tareas_path(@user) %></li>
+                        <li><%= link_to '<i class="fa fa-plus"></i> Nuevo Tarea'.html_safe, new_tarea_path(@user) %></li>
+                    </ul>
+                </li>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-bookmark-o"></i>
+                        <span>Facturas</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><%= link_to '<i class="fa fa-eye"></i> Ver Facturas'.html_safe, facturas_path(@user) %></li>
+                        <li><%= link_to '<i class="fa fa-plus"></i> Nuevo Factura'.html_safe, new_factura_path(@user) %></li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+    </aside>
+
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <section class="content-header">
+                    <!-- Aca los tab -->
+                    <!-- Aca los tab -->
+                    <!-- Aca los tab -->
+                    <h1>
+                        Dashboard
+                        <small>Control panel</small>
+                    </h1>
+                    <ol class="breadcrumb">
+                        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+                        <li class="active">Dashboard</li>
+                    </ol>
+                    <!-- Aca los tab -->
+                    <!-- Aca los tab -->
+                    <!-- Aca los tab -->
+                </section>
+                <%= yield %>
+            </div>
+        </div>
+    </div>
+    <footer class="main-footer">
+        <div class="pull-right hidden-xs">
+            <b>Version</b> 2.3.5
+        </div>
+        <strong>Copyright &copy; 2014-2016 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
+    </footer>
+
+    <div class="control-sidebar-bg"></div>
 </div>
 
-<%= yield %>
 
+<style>
 
-<script>
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
-</script>
+.navbar {
+    background-color: #3c8dbc;
+}
+
+.negro {
+    background-color: #F0F8FF;
+}
+
+.blanco {
+    color : #b8c7ce;
+}
+
+</style>
+    
