--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,21 @@
   <!-- VIEWPORT, sirve para dar responsive y soporte a dspositivos moviles -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <link rel="stylesheet" href="/assets/bootstrap.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <!-- jvectormap -->
+  <link rel="stylesheet" href="/assets/jquery-jvectormap-1.2.2.css">
+  <!-- Theme style -->
+  <link rel="stylesheet" href="/assets/AdminLTE.min.css">
+  <!-- AdminLTE Skins. Choose a skin from the css/skins
+       folder instead of downloading all of them to reduce the load. -->
+  <link rel="stylesheet" href="/assets/_all-skins.min.css">
+  
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
@@ -21,5 +36,27 @@
       <%= yield %>
     </body>
   <%end%>
+  
+    <!-- jQuery 2.2.3 -->
+  <script src="/assets/jquery-2.2.3.min.js"></script>
+  <!-- Bootstrap 3.3.6 -->
+  <script src="/assets/bootstrap.min.js"></script>
+  <!-- FastClick -->
+  <script src="/assets/fastclick.js"></script>
+  <!-- AdminLTE App -->
+  <script src="/assets/app.min.js"></script>
+  <!-- Sparkline -->
+  <script src="/assets/jquery.sparkline.min.js"></script>
+  <!-- jvectormap -->
+  <script src="/assets/jquery-jvectormap-1.2.2.min.js"></script>
+  <script src="/assets/jquery-jvectormap-world-mill-en.js"></script>
+  <!-- SlimScroll 1.3.0 -->
+  <script src="/assets/jquery.slimscroll.min.js"></script>
+  <!-- ChartJS 1.0.1 -->
+  <script src="/assets/Chart.min.js"></script>
+  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+  <script src="/assets/dashboard2.js"></script>
+  <!-- AdminLTE for demo purposes -->
+  <script src="/assets/demo.js"></script>
 
 </html>
